Lexer-Parser/LexerParserParser.py
# Generated from LexerParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LexerParserParser ( Parser ):

    grammarFileName = "LexerParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"empresas\":'", "'\"versi\\u00F3n\":'", 
                     "'\"firma_digital\":'", "'\"ingresos_anuales\":'", 
                     "'\"nombre_empresa\":'", "'\"fundaci\\u00F3n\":'", 
                     "'\"pyme\":'", "'\"link\":'", "'\"direcci\\u00F3n\":'", 
                     "'\"edad\":'", "'\"cargo\":'", "'\"salario\":'", "'\"activo\":'", 
                     "'\"fecha_contrataci\\u00F3n\":'", "'\"fecha_inicio\":'", 
                     "'\"estado\":'", "'\"fecha_fin\":'", "'\"calle\":'", 
                     "'\"ciudad\":'", "'\"pais\":'", "'\"departamentos\":'", 
                     "'\"empleados\":'", "'\"subdepartamentos\":'", "'\"proyectos\":'", 
                     "'\"nombre\":'", "'\"jefe\":'", "'{'", "'}'", "'['", 
                     "']'", "','", "'null'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "EMPRESAS", "VERSION", "FIRMA_DIGITAL", 
                      "INGRESOS_ANUALES", "NOMBRE_EMPRESA", "FUNDACION", 
                      "PYME", "LINK", "DIRECCION", "EDAD", "CARGO", "SALARIO", 
                      "ACTIVO", "FECHA_CONTRATACION", "FECHA_INICIO", "ESTADO", 
                      "FECHA_FIN", "CALLE", "CIUDAD", "PAIS", "DEPARTAMENTOS", 
                      "EMPLEADO_LISTA", "SUBDEPARTAMENTOS_LISTA", "PROYECTOS_LISTA", 
                      "NOMBRE", "JEFE", "ABRO_LLAVE", "CIERRO_LLAVE", "ABRO_CORCHETE", 
                      "CIERRO_CORCHETE", "COMA", "NULL", "TRUE", "FALSE", 
                      "INT", "FLOAT", "DIGIT", "DATE", "STRING", "URL", 
                      "WS" ]

    RULE_json = 0
    RULE_t_json = 1
    RULE_t_contenido = 2
    RULE_t_version = 3
    RULE_t_firma_digital = 4
    RULE_t_empresas = 5
    RULE_t_listaempresas = 6
    RULE_t_empresa = 7
    RULE_t_contenidoempresa = 8
    RULE_t_ingresos_anuales = 9
    RULE_t_nombre_empresa = 10
    RULE_t_fundacion = 11
    RULE_t_pyme = 12
    RULE_t_link = 13
    RULE_t_direccion = 14
    RULE_t_tipo_direccion = 15
    RULE_t_calle = 16
    RULE_t_ciudad = 17
    RULE_t_pais = 18
    RULE_t_departamentos = 19
    RULE_t_listadepartamentos = 20
    RULE_t_departamento = 21
    RULE_t_contenidodepartamento = 22
    RULE_t_nombre = 23
    RULE_t_jefe = 24
    RULE_t_subdepartamentos = 25
    RULE_t_listasubdepartamentos = 26
    RULE_t_subdepartamento = 27
    RULE_t_contenidosubdepartamentos = 28
    RULE_t_empleados = 29
    RULE_t_listaempleados = 30
    RULE_t_empleado = 31
    RULE_t_contenidoempleado = 32
    RULE_t_edad = 33
    RULE_t_cargo = 34
    RULE_t_salario = 35
    RULE_t_activo = 36
    RULE_t_fecha_contratacion = 37
    RULE_t_proyectos = 38
    RULE_t_listaproyectos = 39
    RULE_t_proyecto = 40
    RULE_t_contenidoproyecto = 41
    RULE_t_fecha_inicio = 42
    RULE_t_estado = 43
    RULE_t_fecha_fin = 44

    ruleNames =  [ "json", "t_json", "t_contenido", "t_version", "t_firma_digital", 
                   "t_empresas", "t_listaempresas", "t_empresa", "t_contenidoempresa", 
                   "t_ingresos_anuales", "t_nombre_empresa", "t_fundacion", 
                   "t_pyme", "t_link", "t_direccion", "t_tipo_direccion", 
                   "t_calle", "t_ciudad", "t_pais", "t_departamentos", "t_listadepartamentos", 
                   "t_departamento", "t_contenidodepartamento", "t_nombre", 
                   "t_jefe", "t_subdepartamentos", "t_listasubdepartamentos", 
                   "t_subdepartamento", "t_contenidosubdepartamentos", "t_empleados", 
                   "t_listaempleados", "t_empleado", "t_contenidoempleado", 
                   "t_edad", "t_cargo", "t_salario", "t_activo", "t_fecha_contratacion", 
                   "t_proyectos", "t_listaproyectos", "t_proyecto", "t_contenidoproyecto", 
                   "t_fecha_inicio", "t_estado", "t_fecha_fin" ]

    EOF = Token.EOF
    EMPRESAS=1
    VERSION=2
    FIRMA_DIGITAL=3
    INGRESOS_ANUALES=4
    NOMBRE_EMPRESA=5
    FUNDACION=6
    PYME=7
    LINK=8
    DIRECCION=9
    EDAD=10
    CARGO=11
    SALARIO=12
    ACTIVO=13
    FECHA_CONTRATACION=14
    FECHA_INICIO=15
    ESTADO=16
    FECHA_FIN=17
    CALLE=18
    CIUDAD=19
    PAIS=20
    DEPARTAMENTOS=21
    EMPLEADO_LISTA=22
    SUBDEPARTAMENTOS_LISTA=23
    PROYECTOS_LISTA=24
    NOMBRE=25
    JEFE=26
    ABRO_LLAVE=27
    CIERRO_LLAVE=28
    ABRO_CORCHETE=29
    CIERRO_CORCHETE=30
    COMA=31
    NULL=32
    TRUE=33
    FALSE=34
    INT=35
    FLOAT=36
    DIGIT=37
    DATE=38
    STRING=39
    URL=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class JsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_json(self):
            return self.getTypedRuleContext(LexerParserParser.T_jsonContext,0)


        def WS(self):
            return self.getToken(LexerParserParser.WS, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)




    def json(self):

        localctx = LexerParserParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.t_json()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(LexerParserParser.WS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_jsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRO_LLAVE(self):
            return self.getToken(LexerParserParser.ABRO_LLAVE, 0)

        def t_contenido(self):
            return self.getTypedRuleContext(LexerParserParser.T_contenidoContext,0)


        def CIERRO_LLAVE(self):
            return self.getToken(LexerParserParser.CIERRO_LLAVE, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_json" ):
                listener.enterT_json(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_json" ):
                listener.exitT_json(self)




    def t_json(self):

        localctx = LexerParserParser.T_jsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_t_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(LexerParserParser.ABRO_LLAVE)
            self.state = 95
            self.t_contenido()
            self.state = 96
            self.match(LexerParserParser.CIERRO_LLAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_contenidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_empresas(self):
            return self.getTypedRuleContext(LexerParserParser.T_empresasContext,0)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(LexerParserParser.COMA)
            else:
                return self.getToken(LexerParserParser.COMA, i)

        def t_version(self):
            return self.getTypedRuleContext(LexerParserParser.T_versionContext,0)


        def t_firma_digital(self):
            return self.getTypedRuleContext(LexerParserParser.T_firma_digitalContext,0)


        def getRuleIndex(self):
            return LexerParserParser.RULE_t_contenido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_contenido" ):
                listener.enterT_contenido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_contenido" ):
                listener.exitT_contenido(self)




    def t_contenido(self):

        localctx = LexerParserParser.T_contenidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_t_contenido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.t_empresas()
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(LexerParserParser.COMA)
                self.state = 100
                self.t_version()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 103
                self.match(LexerParserParser.COMA)
                self.state = 104
                self.t_firma_digital()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_versionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(LexerParserParser.VERSION, 0)

        def STRING(self):
            return self.getToken(LexerParserParser.STRING, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_version" ):
                listener.enterT_version(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_version" ):
                listener.exitT_version(self)




    def t_version(self):

        localctx = LexerParserParser.T_versionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_t_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(LexerParserParser.VERSION)
            self.state = 108
            self.match(LexerParserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_firma_digitalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIRMA_DIGITAL(self):
            return self.getToken(LexerParserParser.FIRMA_DIGITAL, 0)

        def STRING(self):
            return self.getToken(LexerParserParser.STRING, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_firma_digital

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_firma_digital" ):
                listener.enterT_firma_digital(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_firma_digital" ):
                listener.exitT_firma_digital(self)




    def t_firma_digital(self):

        localctx = LexerParserParser.T_firma_digitalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_t_firma_digital)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(LexerParserParser.FIRMA_DIGITAL)
            self.state = 111
            self.match(LexerParserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_empresasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMPRESAS(self):
            return self.getToken(LexerParserParser.EMPRESAS, 0)

        def ABRO_CORCHETE(self):
            return self.getToken(LexerParserParser.ABRO_CORCHETE, 0)

        def t_listaempresas(self):
            return self.getTypedRuleContext(LexerParserParser.T_listaempresasContext,0)


        def CIERRO_CORCHETE(self):
            return self.getToken(LexerParserParser.CIERRO_CORCHETE, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_empresas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_empresas" ):
                listener.enterT_empresas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_empresas" ):
                listener.exitT_empresas(self)




    def t_empresas(self):

        localctx = LexerParserParser.T_empresasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_t_empresas)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(LexerParserParser.EMPRESAS)
            self.state = 114
            self.match(LexerParserParser.ABRO_CORCHETE)
            self.state = 115
            self.t_listaempresas()
            self.state = 116
            self.match(LexerParserParser.CIERRO_CORCHETE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_listaempresasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_empresa(self):
            return self.getTypedRuleContext(LexerParserParser.T_empresaContext,0)


        def COMA(self):
            return self.getToken(LexerParserParser.COMA, 0)

        def t_listaempresas(self):
            return self.getTypedRuleContext(LexerParserParser.T_listaempresasContext,0)


        def getRuleIndex(self):
            return LexerParserParser.RULE_t_listaempresas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_listaempresas" ):
                listener.enterT_listaempresas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_listaempresas" ):
                listener.exitT_listaempresas(self)




    def t_listaempresas(self):

        localctx = LexerParserParser.T_listaempresasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_t_listaempresas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.t_empresa()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 119
                self.match(LexerParserParser.COMA)
                self.state = 120
                self.t_listaempresas()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_empresaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRO_LLAVE(self):
            return self.getToken(LexerParserParser.ABRO_LLAVE, 0)

        def t_contenidoempresa(self):
            return self.getTypedRuleContext(LexerParserParser.T_contenidoempresaContext,0)


        def CIERRO_LLAVE(self):
            return self.getToken(LexerParserParser.CIERRO_LLAVE, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_empresa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_empresa" ):
                listener.enterT_empresa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_empresa" ):
                listener.exitT_empresa(self)




    def t_empresa(self):

        localctx = LexerParserParser.T_empresaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_t_empresa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LexerParserParser.ABRO_LLAVE)
            self.state = 124
            self.t_contenidoempresa()
            self.state = 125
            self.match(LexerParserParser.CIERRO_LLAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_contenidoempresaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_nombre_empresa(self):
            return self.getTypedRuleContext(LexerParserParser.T_nombre_empresaContext,0)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(LexerParserParser.COMA)
            else:
                return self.getToken(LexerParserParser.COMA, i)

        def t_fundacion(self):
            return self.getTypedRuleContext(LexerParserParser.T_fundacionContext,0)


        def t_ingresos_anuales(self):
            return self.getTypedRuleContext(LexerParserParser.T_ingresos_anualesContext,0)


        def t_pyme(self):
            return self.getTypedRuleContext(LexerParserParser.T_pymeContext,0)


        def t_departamentos(self):
            return self.getTypedRuleContext(LexerParserParser.T_departamentosContext,0)


        def t_direccion(self):
            return self.getTypedRuleContext(LexerParserParser.T_direccionContext,0)


        def t_link(self):
            return self.getTypedRuleContext(LexerParserParser.T_linkContext,0)


        def getRuleIndex(self):
            return LexerParserParser.RULE_t_contenidoempresa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_contenidoempresa" ):
                listener.enterT_contenidoempresa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_contenidoempresa" ):
                listener.exitT_contenidoempresa(self)




    def t_contenidoempresa(self):

        localctx = LexerParserParser.T_contenidoempresaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_t_contenidoempresa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.t_nombre_empresa()
            self.state = 128
            self.match(LexerParserParser.COMA)
            self.state = 129
            self.t_fundacion()
            self.state = 130
            self.match(LexerParserParser.COMA)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 131
                self.t_direccion()
                self.state = 132
                self.match(LexerParserParser.COMA)


            self.state = 136
            self.t_ingresos_anuales()
            self.state = 137
            self.match(LexerParserParser.COMA)
            self.state = 138
            self.t_pyme()
            self.state = 139
            self.match(LexerParserParser.COMA)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 140
                self.t_link()
                self.state = 141
                self.match(LexerParserParser.COMA)


            self.state = 145
            self.t_departamentos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_ingresos_anualesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INGRESOS_ANUALES(self):
            return self.getToken(LexerParserParser.INGRESOS_ANUALES, 0)

        def FLOAT(self):
            return self.getToken(LexerParserParser.FLOAT, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_ingresos_anuales

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_ingresos_anuales" ):
                listener.enterT_ingresos_anuales(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_ingresos_anuales" ):
                listener.exitT_ingresos_anuales(self)




    def t_ingresos_anuales(self):

        localctx = LexerParserParser.T_ingresos_anualesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_t_ingresos_anuales)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(LexerParserParser.INGRESOS_ANUALES)
            self.state = 148
            self.match(LexerParserParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_nombre_empresaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOMBRE_EMPRESA(self):
            return self.getToken(LexerParserParser.NOMBRE_EMPRESA, 0)

        def STRING(self):
            return self.getToken(LexerParserParser.STRING, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_nombre_empresa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_nombre_empresa" ):
                listener.enterT_nombre_empresa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_nombre_empresa" ):
                listener.exitT_nombre_empresa(self)




    def t_nombre_empresa(self):

        localctx = LexerParserParser.T_nombre_empresaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_t_nombre_empresa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(LexerParserParser.NOMBRE_EMPRESA)
            self.state = 151
            self.match(LexerParserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_fundacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNDACION(self):
            return self.getToken(LexerParserParser.FUNDACION, 0)

        def INT(self):
            return self.getToken(LexerParserParser.INT, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_fundacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_fundacion" ):
                listener.enterT_fundacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_fundacion" ):
                listener.exitT_fundacion(self)




    def t_fundacion(self):

        localctx = LexerParserParser.T_fundacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_t_fundacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LexerParserParser.FUNDACION)
            self.state = 154
            self.match(LexerParserParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_pymeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PYME(self):
            return self.getToken(LexerParserParser.PYME, 0)

        def TRUE(self):
            return self.getToken(LexerParserParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(LexerParserParser.FALSE, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_pyme

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_pyme" ):
                listener.enterT_pyme(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_pyme" ):
                listener.exitT_pyme(self)




    def t_pyme(self):

        localctx = LexerParserParser.T_pymeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_t_pyme)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(LexerParserParser.PYME)
            self.state = 157
            _la = self._input.LA(1)
            if not(_la==33 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_linkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINK(self):
            return self.getToken(LexerParserParser.LINK, 0)

        def URL(self):
            return self.getToken(LexerParserParser.URL, 0)

        def getRuleIndex(self):
            return LexerParserParser.RULE_t_link

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_link" ):
                listener.enterT_link(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_link" ):
                listener.exitT_link(self)




    def t_link(self):

        localctx = LexerParserParser.T_linkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_t_link)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(LexerParserParser.LINK)
            self.state = 160
            self.match(LexerParserParser.URL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_direccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIRECCION(self):
            return self.getToken(LexerParserParser.DIRECCION, 0)

        def t_tipo_direccion(self):
            return self.getTypedRuleContext(LexerParserParser.T_tipo_direccionContext,0)


        def getRuleIndex(self):
            return LexerParserParser.RULE_t_direccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT_direccion" ):
                listener.enterT_direccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT_direccion" ):
                listener.exitT_direccion(self)



